# stellarcrop

./: .env.example  .gitignore  LICENSE  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
apps/api/: .env.example  .gitignore  README.md  arkormx.config.ts  eslint.config.js  package.json  resora.config.js  tsconfig.json  tsdown.config.ts  vitest.config.ts
apps/api/src/: env.d.ts  server.ts
apps/api/src/config/: filesystem.ts  middleware.ts  notifications.ts
apps/api/src/core/: app.ts  bootstrap.ts
apps/api/src/routes/: api.ts  web.ts
apps/api/src/services/: BatchService.ts  DocumentService.ts  KycService.ts  RedemptionService.ts  SettlementService.ts  StellarService.ts  TokenService.ts  TomlService.ts
apps/api/src/types/: config.ts  index.ts
apps/api/tests/: basic.test.ts  decorators.test.ts  stellar-validation.test.ts
apps/web/: eslint.config.mjs  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/hooks/: useBatch.ts  useHorizon.ts  useToast.ts  useWallet.ts
apps/web/src/lib/: api.ts  stellar.test.ts
apps/web/src/store/: batchWizardStore.ts  batchesStore.ts  (+2 more)
contracts/: .gitignore  Cargo.toml  README.md
contracts/test-contract/: Cargo.toml
contracts/test-contract/src/: lib.rs  test.rs
docs/: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md
docs/api/: openapi.yaml
docs/guides/: cooperative-setup.md  getting-started.md  investor-onboarding.md  kyc-integration.md  redemption-guide.md  registering-a-batch.md  self-hosting.md  settlement-guide.md  tokenizing-a-batch.md
(+85 files in other folders)
