[workspace]
members = ["test-contract"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/intastellar/stellarcrop"

[workspace.dependencies]
soroban-sdk = "=23.5.3"

[profile.release]
opt-level = "z"
overflow-checks = true
panic = "abort"
codegen-units = 1
lto = true
